# relational-wallet

./: .gitignore  NOTICE.md  README.md
.github/: copilot-instructions.md
.github/workflows/: docs-site.yml  rust-server-ci.yml
apps/contracts/: .env.example  README.md  foundry.toml
apps/contracts/script/: DeployFuji.s.sol
apps/contracts/src/: RelationalEuro.sol
apps/contracts/test/: RelationalEuro.t.sol
apps/proxy/: README.md  nginx.conf
apps/proxy/certs/: .gitignore
apps/proxy/scripts/: get-cert.sh  setup.sh
apps/rust-server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  measurements.toml  rust-server.manifest.template  rust-toolchain.toml
apps/rust-server/.cargo/: audit.toml  config.toml
apps/rust-server/docker/: Dockerfile  README.md  build.sh  restart_aesm.sh  rust-server.manifest.template  start.sh
apps/rust-server/src/: config.rs  error.rs  fiat_poller.rs  lib.rs  main.rs  models.rs  state.rs  store.rs  tls.rs
apps/rust-server/src/api/: admin.rs  balance.rs  bookmarks.rs  fiat.rs  health.rs  invites.rs  mod.rs  payment_links.rs  recurring.rs  resolve.rs  transactions.rs  users.rs  wallet.rs  wallets.rs
apps/rust-server/src/auth/: claims.rs  error.rs  extractor.rs  jwks.rs  jwt_crypto.rs  middleware.rs  mod.rs  roles.rs
apps/rust-server/src/blockchain/: client.rs  erc20.rs  mod.rs  signing.rs  transactions.rs  types.rs
apps/rust-server/src/discovery/: api.rs  attestation.rs  client.rs  ffi.rs  mod.rs  peer.rs  store.rs  voprf_ops.rs
apps/rust-server/src/indexer/: mod.rs
apps/rust-server/src/providers/: clerk.rs  email.rs  mod.rs  truelayer.rs
apps/rust-server/src/storage/: audit.rs  encrypted_fs.rs  mod.rs  ownership.rs  paths.rs  tx_cache.rs  tx_database.rs
apps/rust-server/src/storage/repository/: bookmarks.rs  email_index.rs  fiat.rs  invites.rs  mod.rs  payment_links.rs  recurring.rs  service_wallet.rs  transactions.rs  wallets.rs
apps/wallet-web/: .env.example  .gitignore  README.md  openapi.json  package.json  pnpm-lock.yaml
apps/wallet-web/src/: proxy.ts
apps/wallet-web/src/app/: globals.css  layout.tsx  page.tsx
apps/wallet-web/src/app/account/: page.tsx
apps/wallet-web/src/app/admin/: AdminPanel.tsx  page.tsx
apps/wallet-web/src/app/api/proxy/[...path]/: route.ts
apps/wallet-web/src/app/callback/: page.tsx
apps/wallet-web/src/app/pay/: PayEntry.tsx  page.tsx
apps/wallet-web/src/app/sign-in/[[...sign-in]]/: page.tsx
apps/wallet-web/src/app/sign-up/[[...sign-up]]/: page.tsx
apps/wallet-web/src/app/wallets/: SimpleWalletDashboard.tsx  WalletsHub.tsx  page.tsx
apps/wallet-web/src/app/wallets/[wallet_id]/: not-found.tsx  page.tsx
apps/wallet-web/src/app/wallets/[wallet_id]/fiat/: FiatRequestPanel.tsx  page.tsx
apps/wallet-web/src/app/wallets/[wallet_id]/receive/: PaymentRequestBuilder.tsx  page.tsx
apps/wallet-web/src/app/wallets/[wallet_id]/send/: SendForm.tsx  page.tsx
apps/wallet-web/src/app/wallets/[wallet_id]/transactions/: TransactionList.tsx  page.tsx
apps/wallet-web/src/app/wallets/bootstrap/: BootstrapConsole.tsx  page.tsx
apps/wallet-web/src/app/wallets/new/: page.tsx
apps/wallet-web/src/components/: ActionDialog.tsx  AddressQRCode.tsx  CashExchangeGuide.tsx  CopyAddress.tsx  ManageWalletsSheet.tsx  PendingFiatRequests.tsx  PrimaryActions.tsx  PrimaryBalanceCard.tsx  ProtectedSessionResync.tsx  RecentActivityPreview.tsx  RecipientQrScanner.tsx  ServiceWalletModal.tsx  SimpleWalletShell.tsx  TokenDisplay.tsx  WalletActions.tsx  WalletBalance.tsx  WalletCard.tsx  WalletList.tsx  WalletSwitcher.tsx  index.ts
apps/wallet-web/src/lib/: api.ts  auth.ts  emailHash.ts  paymentRequest.ts  recipients.ts  serverEmailIdentity.ts
apps/wallet-web/src/types/: api.ts  globals.d.ts
docs/: .gitignore  README.md  render.sh
docs/gh-pages/: 404.html  Gemfile  _config.yml  index.md
docs/gh-pages/api/: admin.md  authentication.md  errors.md  fiat.md  index.md  rust-server.md  transactions.md  wallet-enclave.md  wallet-web.md  wallets.md
docs/gh-pages/architecture/: diagram-workflow.md  discovery.md  index.md  security-model.md  system-overview.md  tee-attestation.md
docs/gh-pages/assets/css/: custom.scss
docs/gh-pages/contracts/: deployment-fuji.md  index.md  reur-overview.md  testing.md
docs/gh-pages/guides/: fiat-integration.md  index.md  sending-receiving.md  wallet-management.md
docs/gh-pages/installation/: index.md  rust-server.md  wallet-enclave.md  wallet-web.md
docs/gh-pages/legal/: index.md  privacy-policy.md  terms-of-service.md
docs/gh-pages/operations/: index.md  jwt-testing.md  publishing.md
docs/gh-pages/security/: audit-logging.md  index.md  key-management.md  threat-model.md
docs/includes/: style.puml
docs/sequence/: cash_exchange.puml  fiat_offramp.puml  fiat_onramp.puml  pull_transfer.puml  push_transfer.puml  user_registration_kyc.puml
scripts/: check_headers.sh  ci-local.sh  deploy-instance.sh  update_header_year.sh
scripts/systemd/: rust-server.service
