# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Relational Network
[package]
name = "relational-rust-server"
version = "0.1.0"
edition = "2021"
authors = ["Relational Network"]
license = "AGPL-3.0-or-later"
publish = false
rust-version = "1.92"
description = "Minimal Rust backend APIs (bookmarks, invites, recurring payments)."

[dependencies]
axum = { version = "0.8.8", features = ["macros", "json"] }
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.20.0", features = ["v4", "serde", "fast-rng"] }
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
tower-http = { version = "0.6.8", features = ["cors"] }
rustls = { version = "0.23.26", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2.0"
