# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Relational Network

# =============================================================================
# Relational Wallet - Custodial Avalanche Wallet Service
# =============================================================================
# This service runs inside an Intel SGX enclave with Gramine for secure key
# management. 
# =============================================================================

[package]
name = "relational-rust-server"
version = "0.1.0"
edition = "2021"
authors = ["Relational Network"]
license = "AGPL-3.0-or-later"
publish = false
rust-version = "1.92"
description = "Custodial Avalanche wallet service running inside Intel SGX enclave with Gramine."

[dependencies]
# -----------------------------------------------------------------------------
# Web Framework
# -----------------------------------------------------------------------------
axum = { version = "0.8.8", features = ["macros", "json"] }
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
tower-http = { version = "0.6.8", features = ["cors", "request-id", "trace"] }
tower = "0.5.3"

# -----------------------------------------------------------------------------
# Serialization
# -----------------------------------------------------------------------------
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# -----------------------------------------------------------------------------
# Async Runtime
# -----------------------------------------------------------------------------
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

# -----------------------------------------------------------------------------
# Utilities
# -----------------------------------------------------------------------------
uuid = { version = "1.20.0", features = ["v4", "v5", "serde", "fast-rng"] }
chrono = { version = "0.4.43", default-features = false, features = ["clock", "serde"] }
url = "2.5.4"

# -----------------------------------------------------------------------------
# Logging
# -----------------------------------------------------------------------------
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }

# -----------------------------------------------------------------------------
# API Documentation
# -----------------------------------------------------------------------------
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored", "debug-embed"] }

# -----------------------------------------------------------------------------
# TLS
# -----------------------------------------------------------------------------
rustls = { version = "0.23.26", default-features = false, features = ["ring", "std"] }

# -----------------------------------------------------------------------------
# Authentication
# -----------------------------------------------------------------------------
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
truelayer-signing = { version = "0.3.1", default-features = false }

# -----------------------------------------------------------------------------
# Cryptography 
# -----------------------------------------------------------------------------
k256 = { version = "0.13.4", features = ["ecdsa", "pkcs8", "pem"] }
pem = "3.0.4"

# -----------------------------------------------------------------------------
# Blockchain Client (Avalanche C-Chain / EVM)
# -----------------------------------------------------------------------------
alloy = { version = "1.5.2", default-features = false, features = [
    "std",                # Standard library support
    "providers",          # RPC provider for querying blockchain
    "rpc-types",          # Ethereum RPC types
    "contract",           # Smart contract interactions (includes dyn-abi, json-abi, sol-types)
    "signers",            # Transaction signing
    "signer-local",       # Local key signing
    "k256",               # secp256k1 integration (uses k256 crate internally)
    "reqwest-rustls-tls", # HTTPS transport with rustls (no OpenSSL)
] }

# -----------------------------------------------------------------------------
# Error Handling
# -----------------------------------------------------------------------------
thiserror = "2.0.18"

[features]
# Enable development-only code paths (e.g., JWT decode without signature verification).
# MUST NOT be enabled in production/Docker builds.
dev = []

[dev-dependencies]
tempfile = "3.24.0"
base64 = "0.22.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
